--- a/build.xml
+++ b/build.xml
@@ -16,7 +16,7 @@
       destdir="${junit.build.dir}"
       includeAntRuntime="no"
       includeJavaRuntime="no"
-      bootclasspath="${sunspot.bootclasspath}${path.separator}${lib.dir}/junit.jar"
+      bootclasspath="${sunspot.bootclasspath}${path.separator}${lib.dir}/junit.jar${path.separator}${lib.dir}/mockito-all-1.8.5.jar"
       classpath="${build.dir}${path.separator}${sunspot.classpath}${path.separator}${lib.dir}${path.separator}${utility.jars.on.classpath}"
       target="1.2"
       source="1.3"
@@ -36,6 +36,7 @@
         <pathelement location="${sunspot.classpath}"/>
         <pathelement location="${utility.jars.on.classpath}"/>
         <pathelement location="${lib.dir}/junit.jar"/>
+        <pathelement location="${lib.dir}/mockito-all-1.8.5.jar"/>
       </classpath>
       
       <formatter type="plain"/>
