--- a/build.properties
+++ b/build.properties
@@ -1,1 +1,11 @@
 user.classpath=${wpilibj.home}/src
+
+build.dir=build
+lib.dir=lib
+test.dir=test
+
+junit.path=${lib.dir}/junit.jar
+mockito.path=${lib.dir}/mockito.jar
+
+junit.build.dir=${build.dir}/junit
+junit.reports.dir=${build.dir}/reports
