--- a/build.xml
+++ b/build.xml
@@ -1,23 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
 <project basedir="." default="help" name="morlib">
-  <property name="user.properties.file" value="build.properties"/>
-  <property name="junit.src.dir" value="./test"/>
-  <property name="junit.build.dir" value="./build/junit"/>
-  <property name="junit.reports.dir" value="./build/reports"/>
-  <property name="lib.dir" value="./lib"/>
-  <property file="${user.home}/.sunspotfrc.properties"/>
-  <import file="${sunspot.home}/build.xml"/>
+  <property name="user.properties.file" value="build.properties" />
+  <property file="${user.home}/.sunspotfrc.properties" />
+  <import file="${sunspot.home}/build.xml" />
   
   <target name="compile-junit" depends="init">
-    <mkdir dir="${junit.build.dir}"/>
+    <mkdir dir="${junit.build.dir}" />
     
     <javac
-      srcdir="${junit.src.dir}"
+      srcdir="${test.dir}"
       destdir="${junit.build.dir}"
       includeAntRuntime="no"
       includeJavaRuntime="no"
-      bootclasspath="${sunspot.bootclasspath}${path.separator}${lib.dir}/junit.jar${path.separator}${lib.dir}/mockito-all-1.8.5.jar"
-      classpath="${build.dir}${path.separator}${sunspot.classpath}${path.separator}${lib.dir}${path.separator}${utility.jars.on.classpath}"
+      bootclasspath="${sunspot.bootclasspath}"
+      classpath="${build.dir}${path.separator}${sunspot.classpath}${path.separator}${lib.dir}${path.separator}${utility.jars.on.classpath}${path.separator}${junit.path}${path.separator}${mockito.path}"
       target="1.2"
       source="1.3"
       debug="true"
@@ -31,19 +27,19 @@
     
     <junit printsummary="yes" haltonfailure="yes">
       <classpath>
-        <pathelement location="${junit.build.dir}"/>
-        <pathelement location="${build.dir}"/>
-        <pathelement location="${sunspot.classpath}"/>
-        <pathelement location="${utility.jars.on.classpath}"/>
-        <pathelement location="${lib.dir}/junit.jar"/>
-        <pathelement location="${lib.dir}/mockito-all-1.8.5.jar"/>
+        <pathelement location="${junit.build.dir}" />
+        <pathelement location="${build.dir}" />
+        <pathelement location="${sunspot.classpath}" />
+        <pathelement location="${utility.jars.on.classpath}" />
+        <pathelement location="${junit.path}" />
+        <pathelement location="${mockito.path}" />
       </classpath>
       
-      <formatter type="plain"/>
+      <formatter type="plain" />
       
       <batchtest fork="yes" todir="${junit.reports.dir}">
-        <fileset dir="${junit.src.dir}">
-          <include name="**/*Test.java"/>
+        <fileset dir="${test.dir}">
+          <include name="**/*Test.java" />
         </fileset>
       </batchtest>
     </junit>
