--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no" ?>
+
 <project basedir="." default="help" name="morlib">
   <property name="user.properties.file" value="build.properties" />
   <property file="${user.home}/.sunspotfrc.properties" />
@@ -13,7 +14,7 @@
       includeAntRuntime="no"
       includeJavaRuntime="no"
       bootclasspath="${sunspot.bootclasspath}"
-      classpath="${build.dir}${path.separator}${path.separator}${lib.dir}${sunspot.classpath}${path.separator}${utility.jars.on.classpath}${path.separator}${junit.path}${path.separator}${mockito.path}"
+      classpath="${build.dir}${path.separator}${path.separator}${lib.dir}${path.separator}${sunspot.classpath}${path.separator}${utility.jars.on.classpath}${path.separator}${junit.path}${path.separator}${mockito.path}"
       target="1.2"
       source="1.3"
       debug="true"
