--- a/build.xml
+++ b/build.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no" ?>
 
-<project basedir="." default="help" name="morlib">
+<project basedir="." default="help" name="MorTorq">
   <property name="user.properties.file" value="build.properties" />
   <property file="${user.home}/.sunspotfrc.properties" />
   <import file="${sunspot.home}/build.xml" />
   
-  <target name="compile-junit" depends="init">
+  <target name="compile-junit" depends="compile">
     <mkdir dir="${build.dir}" />
     
     <javac
@@ -38,7 +38,7 @@
   <target name="run-junit" depends="compile-junit">
     <mkdir dir="${junit.reports.dir}" />
     
-    <junit printsummary="yes" haltonfailure="yes">
+    <junit printsummary="yes" haltonfailure="no">
       <classpath>
         <pathelement location="${build.dir}" />
         <pathelement location="${lib.dir}" />
@@ -49,6 +49,7 @@
       </classpath>
       
       <formatter type="plain" />
+      <formatter type="plain" usefile="false"/>
       
       <batchtest fork="yes" todir="${junit.reports.dir}">
         <fileset dir="${build.dir}">
